Fix theme details flicker (fix #2025)

--- a/static/css/restyle/restyle.less
+++ b/static/css/restyle/restyle.less
@@ -1693,3 +1693,16 @@ h3.author .transfer-ownership {
     background: none;
   }
 }
+
+// Theme detail page
+#persona #more-personas .article {
+  padding: 0 10px 10px;
+
+  .persona.hovercard {
+    height: 78px;
+
+    &:nth-of-type(2n+1) {
+      clear: left;
+    }
+  }
+}
